samples/hello-world/openshift/k8s/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sample
  name: sample
spec:
  path:
    /HelloWorld/hello
  port:
    targetPort: http
  to:
    kind: Service
    name: sample
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sample
  name: console
spec:
  path:
    /admin
  port:
    targetPort: https
  to:
    kind: Service
    name: console
  tls:
    termination: reencrypt
